src/components/transition/thanks.scss
#thanks {
  h1 {
    position: relative;
    z-index: 2;

    span {
      padding-right: 0.75em;
    }
  }

  .star {
    position: absolute;
    top: -1em;
    right: -1.25em;
    width: 2em;
    height: 2em;
    padding: 0;
    background: url("images/star.png") 0 0/100% 100% no-repeat;
    box-shadow: none;
  }
}

.thanks-filter {
  transform: scale3d(0, 0, 0);
  pointer-events: none;
  background: radial-gradient(lightyellow, goldenrod);

  mix-blend-mode: hard-light;
  will-change: transform;

  @media (max-aspect-ratio: 1 / 1) {
    background-size: auto 100%;
  }

  @media (-ms-high-contrast: none), (-ms-high-contrast: active) {
    opacity: 0.5;
    background-image: inline-svg("radial-solid"),
      radial-gradient(gold, rgba(218, 165, 32, 0.5));
  }
}

#thanks:target {
  h1 {
    animation: 0.24s shake 0.8s both;
  }

  .star {
    animation: 0.19s star-fade-in 0.6s ease-in both;
  }

  ~ .thanks-filter {
    transition: 0.29s transform;
    transform: scale3d(1, 1, 1);
  }
}

@keyframes star-fade-in {
  0% {
    transform: scale3d(10, 10, 1) rotate3d(0, 0, 1, 14deg);
    opacity: 0;
  }
  100% {
    transform: rotate3d(0, 0, 1, 14deg);
    opacity: 1;
  }
}

@keyframes shake {
  0% {
    transform: translate3d(1px, 1px, 0) rotate3d(0, 0, 1, 0deg);
  }
  10% {
    transform: translate3d(-1px, -2px, 0) rotate3d(0, 0, 1, -1deg);
  }
  30% {
    transform: translate3d(3px, 2px, 0) rotate3d(0, 0, 1, 0deg);
  }
  40% {
    transform: translate3d(1px, -1px, 0) rotate3d(0, 0, 1, 1deg);
  }
  60% {
    transform: translate3d(-3px, 1px, 0) rotate3d(0, 0, 1, 0deg);
  }
  70% {
    transform: translate3d(3px, 1px, 0) rotate3d(0, 0, 1, -1deg);
  }
  90% {
    transform: translate3d(1px, 2px, 0) rotate3d(0, 0, 1, 0deg);
  }
  100% {
    transform: translate3d(0, 0, 0) rotate3d(0, 0, 0, -1deg);
  }
}

